@@ -2,7 +2,7 @@
 <head>
 <title>jTDS Project Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta http-equiv="Keywords" content="jTDS, open source, free JDBC driver, free driver, free, JDBC, driver, type 4, pure Java, SQL Server, JDBC 2.0, SQL Server 6.5, SQL Server 7.0, SQL Server 2000, SourceForge">
+<meta http-equiv="Keywords" content="jTDS, open source, free JDBC driver, free driver, free, JDBC, JDBC 2.0, JDBC 3.0, driver, type 4, pure Java, SQL Server, Sybase, SQL Server 6.5, SQL Server 7.0, SQL Server 2000, SQL Server 2005, SourceForge">
 <link rel="stylesheet" href="style.css" type="text/css">
 <style>
 table.inner td.failed { color: red; }
@@ -61,7 +61,7 @@ table.inner td.fastest { color: #00ff00; }
     <td colspan="2"><p class="title">Compliance</p></td>
   </tr>
   <tr>
-    <td>SQL Server 2000, 7.0, 6.5 Compliant</td>
+    <td>SQL Server 2005, 2000, 7.0, 6.5 Compliant</td>
     <td>Yes</td>
   </tr>
   <tr>
