@@ -2,7 +2,7 @@
 <head>
 <title>jTDS Project Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta http-equiv="Keywords" content="jTDS, open source, free JDBC driver, free driver, free, JDBC, JDBC 2.0, JDBC 3.0, driver, type 4, pure Java, SQL Server, Sybase, SQL Server 6.5, SQL Server 7.0, SQL Server 2000, SourceForge">
+<meta http-equiv="Keywords" content="jTDS, open source, free JDBC driver, free driver, free, JDBC, JDBC 2.0, JDBC 3.0, driver, type 4, pure Java, SQL Server, Sybase, SQL Server 6.5, SQL Server 7.0, SQL Server 2000, SQL Server 2005, SourceForge">
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
@@ -52,7 +52,7 @@
 
       <p class="title">Overview</p>
       <p>jTDS is an open source 100% pure Java (type 4) JDBC 3.0 driver for
-        Microsoft SQL Server (6.5, 7 and 2000) and Sybase (10, 11, 12).
+        Microsoft SQL Server (6.5, 7, 2000 and 2005) and Sybase (10, 11, 12).
         jTDS is based on the work of the <a href="http://www.freetds.org">FreeTDS</a>
         project and is currently the fastest complete JDBC driver for SQL Server
         and Sybase. Starting with release 0.7.1 jTDS is 100% JDBC 2.1
